feat(master): structure routing

--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root>
-    <div class="ui active inverted dimmer">
-      <div class="ui text load large">Lade Book Monkey</div>
-    </div>
-  </app-root>
+  <app-root></app-root>
 </body>
 </html>
